--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-owl-carousel": "^2.3.3",
     "react-responsive-masonry": "^2.2.0",
