--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_REST_API_URL=https://610weblab.in/610weblab/wp-json/wp/v2
+REACT_APP_REST_API_FORM_URL=https://610weblab.in/610weblab/wp-json/contact-form-7/v1/contact-forms
