I have created the video popup component and added it on the about us page. I have also used email.js library for forms submission and used it for home page banner form and contact page form

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_APP_REST_API_URL=https://610weblab.in/610weblab/wp-json/wp/v2
 REACT_APP_REST_API_FORM_URL=https://610weblab.in/610weblab/wp-json/contact-form-7/v1/contact-forms
+REACT_APP_EMAILJS_SERVICE_ID=service_t3r23xv
+REACT_APP_EMAILJS_TEMPLATE_ID=template_3tg14vl
+REACT_APP_EMAILJS_PUBLIC_KEY=hNn41If01ElxOK9t2
