--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-owl-carousel": "^2.3.3",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.23.1",
