--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-owl-carousel": "^2.3.3",
